[tool.poetry]
name = "friktion"
version = "0.1.0"
description = ""
authors = ["bigdefidev <bigdefidev@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
solana = "0.25.0"
anchorpy = "0.9.4"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest="^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
