[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'opyn'
description = 'SDK to interact with Opyn Finance systems'
license = 'MIT'
version = '0.1.0'
authors = [
    "Anil <anil@opyn.co>",
    "Haythem <haythem@opyn.co>",
]
packages = [
    { include = 'abis' },
    { include = 'opyn' },
]

[tool.poetry.dependencies]
python = '>3.7.1,<4.0.0'
cryptography = '36.0.2'
eth-abi = '2.1.1'
eth-account = '0.5.7'
eth-hash = '0.3.2'
eth-keyfile = '0.5.1'
eth-keys = '0.3.4'
eth-rlp = '0.2.1'
eth-tester = '0.6.0b6'
eth-typing = '2.3.0'
eth-utils = '1.10.0'
PyJWT = '2.3.0'
web3 = '5.28.0'
python-dotenv = "^0.20.0"
