[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'opyn'
description = 'SDK to interact with Opyn Finance systems'
license = 'MIT'
version = '0.1.0'
authors = [
    "Anil <anil@opyn.co>",
    "Haythem <haythem@opyn.co>",
]
packages = [
    { include = 'abis' },
    { include = 'opyn' },
]

[tool.poetry.dependencies]
python = '>=3.7.2,<3.11'
cryptography = '36.0.2'
eth-abi = '3.0.0'
eth-account = '0.6.0'
eth-hash = '0.3.2'
eth-keyfile = '0.6.0'
eth-keys = '0.4.0'
eth-rlp = '0.3.0'
eth-typing = '3.0.0'
eth-utils = '2.0.0'
PyJWT = '2.3.0'
web3 = '6.0.0-beta.4'
python-dotenv = "^0.21.0"
py-eth-sig-utils = "^0.4.0"
