[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'ribbon'
description = 'SDK to interact with Ribbon Finance systems'
license = 'MIT'
version = '0.1.0'
authors = [
    "Steven Williams <steven@ribbon.finance>",
    "Paolo D'Onorio De Meo <paolo@paradigm.co>",
]
packages = [
    { include = 'abis' },
    { include = 'ribbon' },
]

[tool.poetry.dependencies]
python = '^3.6'

cryptography = '36.0.2'
eth-abi = '2.1.1'
eth-account = '0.5.7'
eth-hash = '0.3.2'
eth-keyfile = '0.5.1'
eth-keys = '0.3.4'
eth-rlp = '0.2.1'
eth-tester = '0.6.0b6'
eth-typing = '2.3.0'
eth-utils = '1.10.0'
PyJWT = '2.3.0'
web3 = '6.0.0-beta.4'
