[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'sdk_commons'
description = 'Common SDK utilities'
license = 'MIT'
version = '0.1.0'
authors = [
    "Mattia D'Antonio <mattia@paradigm.co>",
]
packages = [
    { include = 'sdk_commons' },
    { include = 'sdk_commons/abis' },
]

[tool.poetry.dependencies]
python = '^3.6'
