[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'thetanuts'
description = 'SDK to interact with Thetanuts systems'
license = 'MIT'
version = '0.1.0'
authors = [
    "Pecan SoCanYou <pecan@thetanut.finance>",
    "Paolo D'Onorio De Meo <paolo@paradigm.co>",
]
packages = [
    { include = 'thetanuts/abis' },
    { include = 'thetanuts' },
]

[tool.poetry.dependencies]
python = '>=3.7.2,<3.11'
eth-abi = '3.0.0'
eth-account = '0.6.0'
eth-keys = '0.4.0'
eth-typing = '3.0.0'
eth-utils = '2.0.0'
web3 = '6.0.0-beta.4'
